# metacoq_plugins

./: .gitignore  .gitmodules  README.md  coq-metacoq-embed-gentree.opam  coq-metacoq-nested-induction.opam  coq-metacoq-parametricity.opam  coq-metacoq-suterm.opam
.github/workflows/: build.yml
embed-gentree/: README.md  _CoqProject  demo.v  examples.v  gentree.v  gherkin.v
nested_induction/: Makefile.coq.conf  MetaCoqInductionPrinciples.v  Modes.v  addContainer.v  addContainer_test2.v  constructorList.v  de_bruijn_print.v  destruct_lemma.v  helperGen.v  implication.v  interactive.v  nested.v  non_uniform.v  parametricity_test.v  parametricity_test_2.v  removeNonAug.v  rose_ind_test.v  show.v  standardNested.v  test.v
parametricity/: .Makefile.coq.d  .gitignore  .lia.cache  Makefile  Makefile.coq  Makefile.coq.conf  README.md  _CoqProject  de_bruijn_print.glob  de_bruijn_print.v  debug.glob  debug.v  makeFresh.glob  makeFresh.v  metacoq-config  param_all.glob  param_all.v  param_comp.glob  param_comp.v  param_eq.glob  param_eq.v  param_exists.glob  param_exists.v  param_exists_test.glob  param_exists_test.v  param_other.glob  param_other.v  param_other_test.glob  param_other_test.v  param_test.glob  param_test.v  param_unary.glob  param_unary.v  showcase.glob  showcase.v  translation_utils.glob  translation_utils.v
showcases/: induction.v  induction_param.v  parametricity.v
subterm/: _CoqProject  non_uniform.v  sigma.v  subterm.v  test.v  universes.v
test/: exp.v  universe_test.v
