opam-version: "2.0"
version: "dev+8.12"
authors: ["Yannick Forster"
          "Christian Hagemeier"]
license: "MIT"
build: [
  [make "-C" "embed-gentree" "-j%{jobs}%"]
]
install: [
  [make "-C" "embed-gentree" "install"]
]
depends: [
  "coq" {= "8.12.0"}
  "coq-metacoq-template" {= "dev"}
  "coq-metacoq-pcuic" {= "dev"}
]
