opam-version: "2.0"
version: "dev+8.12"
authors: ["Yannick Forster"
          "Marcel Ullrich"]
license: "MIT"
build: [
  [make "-C" "parametricity" "-j%{jobs}%"]
]
install: [
  [make "-C" "parametricity" "install"]
]
depends: [
  "coq" {= "8.12.0"}
  "coq-metacoq-template" {= "dev"}
  "coq-metacoq-pcuic" {= "dev"}
  "coq-metacoq-translations" {= "dev"}
]
